# cabal-project-tags

./: .ghc.environment.x86_64-linux-8.10.7  cabal-project-tags.cabal
src/: Main.hs
