cabal-version:      2.4
name:               cabal-project-tags
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ricardo Catalinas Jiménez
maintainer:         r@untroubled.be

-- A copyright notice.
-- copyright:
-- category:

executable cabal-project-tags
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , filepath
                    , directory
                    , text
                    , cabal-plan
                    , typed-process
                    , interpolate
                    , optparse-generic
